# pi-drive

./: .gitignore  README.md  limits.py  main.py  pyproject.toml
docs/: architecture.md  cameras.md  estop.md  gps.md  imu.md  linear_actuators.md  pi05_finetune_plan.md  pi_inference_agx_thor.md  ps5_drive.md  stage1_bc_plan.md  steering.md
network-latency-test/: .gitignore  README.md  analyze.py  pyproject.toml  sweep.py
network-latency-test/client/: index.html  main.py
network-latency-test/server/: main.py
other_models/simlingo/: .gitignore  README.md  TRAINING.md  modal_app.py  pyproject.toml
other_models/simlingo/config/: nvidia_bench_unvec.yaml  nvidia_finetune.yaml  nvidia_smoke_vec.yaml
other_models/simlingo/scripts/: apply_ddp_finalize.py  apply_profiling.py  apply_smoke_fixes.py  extract_nvidia.py  inference.py  nuscenes_loader.py  nvidia_loader.py  nvidia_trainer.py  nvidia_viz.py  special_inference.py  viz.py  viz_training.py
other_models/simlingo/special/: ego.jsonl
other_models/simlingo_optimized/: FINDINGS.md  __init__.py  export_trt.py  modal_benchmark.py  preprocessing.py  quantization.py  streaming_kv.py
pi05/: TRAINING.md  modal_build_dataset.py  modal_debug_versions.py  modal_extract_data.py  modal_train_bc.py  modal_validate.py  modal_visualize.py  nav_prompt.py  visualize_dataset.py
simlingo/: modal_training.py
simlingo/config/: nvidia_bench_vec.yaml  nvidia_finetune.yaml  nvidia_smoke.yaml
simlingo/scripts/: apply_fov_fix.py  (+3 more)
simlingo_optimized/: config.py  inference.py  modal_benchmark.py  modal_trtllm.py  quantization.py
(+10 files in other folders)
