[project]
name = "network-latency-test"
version = "0.1.0"
description = "End-to-end RTT benchmark between a cart-mounted Jetson Thor client and a Modal-hosted GPU server over QUIC."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.66",
    "quic-portal>=0.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
analyze = [
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["analyze"]
